# inheritance-chess

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  build_and_run_project.cmake  buildproject.cmd  linuxbuildproject.sh  main.cpp
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-self-assign.yml  build_and_run.yml  deploy-docs.yml  integration-test.yml  welcome.yml
cbm/: README.md
cbm/include/: board_manager.h
cbm/src/: board_manager.cpp
cbm/tests/: test_board_manager.cpp  test_validation.cpp
cci/: CMakeLists.txt
cci/include/: grid.h
cci/src/: grid.cpp  piece_factory.cpp
cci/tests/: test_grid_adapted.cpp  test_main.cpp  test_piece_factory.cpp
cei/: CMakeLists.txt  README.md
cei/include/: chess_engine.h
cei/src/: chess_engine.cpp
cei/tests/: test_chess_engine.cpp
ces/: CMakeLists.txt
cgh/: CMakeLists.txt
cgh/include/: game_handler.h
cgh/src/: game_handler.cpp
cgh/tests/: test_game_handler.cpp
cmakehelpers/: detect_generator.cmake
cpl/: CMakeLists.txt  README.md
cpl/include/: chess_bishop.h  chess_king.h  chess_knight.h  chess_pawn.h  chess_queen.h  chess_rook.h  pieces_logic.h
cpl/src/: chess_bishop.cpp  chess_king.cpp  chess_knight.cpp  chess_pawn.cpp  chess_queen.cpp  chess_rook.cpp  pieces_logic.cpp
cpl/tests/: test_bishop.cpp  test_chess_pawn.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_pieces_logic.cpp  test_properties_integration.cpp  test_queen.cpp  test_rook.cpp
ctu/: README.md
ctu/include/: translation_unit.h
ctu/src/: translation_unit.cpp
docs/: kanban.md
include/: bishop.hpp  board.hpp  common.hpp  king.hpp  knight.hpp  pawns.hpp  pieces.hpp  piezas.hpp  queen.hpp  rook.hpp
src/: bishop.cpp  board.cpp  king.cpp  knight.cpp  pawns.cpp  pieces.cpp  piezas.cpp  piezas.hpp  queen.cpp  rook.cpp
tests/: CMakeLists.txt  test_board.cpp  test_main.cpp  test_pawns.cpp
